--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
     - pip install -r requirements.txt
 
 script:
-    coverage run test_anime.py
+    coverage run anime.py
 
 after_success:
     coverage report -m
